apps/kelbi-debug/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kelbi-launcherserver-ingress
  namespace: kelbi-debug
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`launcher.arcamh.com`)
      priority: 10
      services:
        - name: kelbi-launcherserver
          namespace: kelbi-debug
          port: 80
